--- a/main.tex
+++ b/main.tex
@@ -1,371 +1,161 @@
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
-%	The MIT License (MIT)
-%
-%	Copyright (c) 2015 Jan Küster
-%
-%	Permission is hereby granted, free of charge, to any person obtaining a copy
-%	of this software and associated documentation files (the "Software"), to deal
-%	in the Software without restriction, including without limitation the rights
-%	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-%	copies of the Software, and to permit persons to whom the Software is
-%	furnished to do so, subject to the following conditions:
-%	
-%	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-%	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-%	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-%	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-%	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-%	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-%	THE SOFTWARE.
-%	
-%
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
-
-
-%============================================================================%
-%
-%	DOCUMENT DEFINITION
-%
-%============================================================================%
-
-%we use article class because we want to fully customize the page and dont use a cv template
-\documentclass[10pt,A4]{article}	
-
-
 %----------------------------------------------------------------------------------------
-%	ENCODING
+%	CONFIGURAÇÃO DO DOCUMENTO
 %----------------------------------------------------------------------------------------
-
-%we use utf8 since we want to build from any machine
+\documentclass[10pt,a4paper]{article}	
 \usepackage[utf8]{inputenc}		
-
-%----------------------------------------------------------------------------------------
-%	HYPERREF FOR CLICKABLE LINKS
-%----------------------------------------------------------------------------------------
+\usepackage[T1]{fontenc}
+\usepackage[default]{raleway}
+\usepackage[a4paper, margin=1.5cm, top=1.2cm, bottom=1.5cm]{geometry}
+\usepackage{xcolor}
 \usepackage{hyperref}
+\usepackage{fontawesome5}
+\usepackage{enumitem}
+\usepackage{multicol}
+
+% Definição de Cores
+\definecolor{sectcol}{RGB}{0,100,200} % Azul profissional
+\definecolor{textcol}{RGB}{50,50,50}
+\definecolor{lightgray}{RGB}{120,120,120}
+
 \hypersetup{
     colorlinks=true,
-    linkcolor=sectcol,
-    filecolor=sectcol,      
     urlcolor=sectcol,
-    citecolor=sectcol,
-    pdftitle={Currículo - Gabriel Matheus Oliveira},
     pdfauthor={Gabriel Matheus Oliveira},
-    pdfsubject={Currículo Profissional},
-    pdfkeywords={Analista de Sistemas, Desenvolvedor, Python, SQL, ETL}
+    pdftitle={Currículo - Gabriel Matheus Oliveira}
 }
 
-%----------------------------------------------------------------------------------------
-%	LOGIC
-%----------------------------------------------------------------------------------------
-
-% provides \isempty test
-\usepackage{xifthen}
-
-%----------------------------------------------------------------------------------------
-%	FONT
-%----------------------------------------------------------------------------------------
-
-\usepackage[default]{raleway}
-\renewcommand*\familydefault{\sfdefault} 	
-\usepackage[T1]{fontenc}
-\usepackage{moresize}		
-
-
-%----------------------------------------------------------------------------------------
-%	PAGE LAYOUT  DEFINITIONS
-%----------------------------------------------------------------------------------------
-
-\usepackage[a4paper]{geometry}		
-\geometry{top=1.25cm, bottom=-.6cm, left=1.5cm, right=1.5cm} 	
-
-\usepackage{fancyhdr}				
-\pagestyle{fancy}
-\setlength{\headheight}{-5pt}		
-
+% Ajuste de parágrafo e espaçamento
 \setlength{\parindent}{0mm}
+\setlist[itemize]{nosep, leftmargin=1em, labelsep=0.5em} % Listas compactas
 
 %----------------------------------------------------------------------------------------
-%	TABLE /ARRAY DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-
-\usepackage{multicol}			
-\usepackage{multirow}
-\usepackage{array}
-\newcolumntype{x}[1]{%
->{\raggedleft\hspace{0pt}}p{#1}}%
-
-%----------------------------------------------------------------------------------------
-%	GRAPHICS DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-
-\usepackage{graphicx}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{tikz}				
-\usetikzlibrary{shapes, backgrounds,mindmap, trees}
-
-%----------------------------------------------------------------------------------------
-%	Color DEFINITIONS
-%---------------------------------------------------------------------------------------- 
-
-\usepackage{color}
-
-%accent color
-\definecolor{sectcol}{RGB}{0,150,255}
-
-%dark background color
-\definecolor{bgcol}{RGB}{110,110,110}
-
-%light background / accent color
-\definecolor{softcol}{RGB}{225,225,225}
-
-
-%============================================================================%
-%
-%
-%	DEFINITIONS
-%
-%
-%============================================================================%
-
-%----------------------------------------------------------------------------------------
-% 	HEADER
+%	COMANDOS CUSTOMIZADOS
 %----------------------------------------------------------------------------------------
 
-\renewcommand{\headrulewidth}{0pt} 
-\renewcommand{\footrulewidth}{0pt}	  	
-\renewcommand{\thepage}{}	
-\renewcommand{\thesection}{}			
-
-%----------------------------------------------------------------------------------------
-% 	ARROW GRAPHICS in Tikz
-%----------------------------------------------------------------------------------------
-
-\newcommand{\tzlarrow}{(0,0) -- (0.2,0) -- (0.3,0.2) -- (0.2,0.4) -- (0,0.4) -- (0.1,0.2) -- cycle;}	
-
-\newcommand{\larrow}[1]
-{\begin{tikzpicture}[scale=0.58]
-	 \filldraw[fill=#1!100,draw=#1!100!black]  \tzlarrow
- \end{tikzpicture}
+% Seção estilizada
+\newcommand{\cvsection}[1]{
+    \vspace{12pt}
+    {\large\textcolor{sectcol}{\textbf{\MakeUppercase{#1}}}}
+    \vspace{2pt}
+    \hrule height 0.5pt \relax
+    \vspace{6pt}
 }
 
-\newcommand{\tzrarrow}{ (0,0.2) -- (0.1,0) -- (0.3,0) -- (0.2,0.2) -- (0.3,0.4) -- (0.1,0.4) -- cycle;}
-
-\newcommand{\rarrow}
-{\begin{tikzpicture}[scale=0.7]
-	\filldraw[fill=sectcol!100,draw=sectcol!100!black] \tzrarrow
- \end{tikzpicture}
+% Evento de experiência/formação
+% Uso: \cvevent{data}{cargo}{empresa}{descrição}
+\newcommand{\cvevent}[4]{
+    \noindent \textbf{#2} \hfill \textcolor{sectcol}{\small \faCalendar* #1} \\
+    \noindent \textit{\textcolor{lightgray}{#3}} \vspace{4pt} \\
+    {#4} \vspace{8pt}
 }
 
 %----------------------------------------------------------------------------------------
-%	custom sections
+%	INÍCIO DO DOCUMENTO
 %----------------------------------------------------------------------------------------
-
-\newcommand{\cvsection}[1]
-{
-	\begin{center}
-		\large\textcolor{sectcol}{\textbf{#1}}
-	\end{center}
-}
-
-\newcommand{\metasection}[2]
-{
-\footnotesize{#2} \hspace*{\fill} \footnotesize{#1}\\[1pt]
-}
-
-%----------------------------------------------------------------------------------------
-%	 CV EVENT
-%----------------------------------------------------------------------------------------
-
-\newcommand{\cvevent}[5]
-{
-\begin{tabular*}{1\textwidth}{p{13.6cm}  x{3.9cm}}
-	\textbf{#2} - \textcolor{bgcol}{#3} &   \vspace{2.5pt}\textcolor{sectcol}{#1}
-\end{tabular*}
-
-\vspace{-8pt}
-\textcolor{softcol}{\hrule}
-\vspace{6pt}
-
-  $\cdot$ #4\\[3pt]
-  $\cdot$ #5\\[6pt]
-}
-
-\newcommand{\cveventmeta}[2]
-{
-	\mbox{\mystrut \hspace{87pt}\textit{#1}}\\
-	#2
-}
-
-%----------------------------------------------------------------------------------------
-% CUSTOM STRUT FOR EMPTY BOXES
-%----------------------------------------- -----------------------------------------------
-\newcommand{\mystrut}{\rule[-.3\baselineskip]{0pt}{\baselineskip}}
-
-%============================================================================%
-%
-%
-%
-%	DOCUMENT CONTENT
-%
-%
-%
-%============================================================================%
 \begin{document}
 
-\pagestyle{fancy}	
-
-%---------------------------------------------------------------------------------------
-%	TITLE HEADLINE
-%----------------------------------------------------------------------------------------
-\vspace{-8pt}
+%--- CABEÇALHO ---
 \begin{center}
-	\HUGE \textsc{Gabriel Matheus Oliveira} \textcolor{sectcol}{\rule[-1mm]{1mm}{0.9cm}} \textsc{Currículo}\\[2pt]
-	\small Analista de Sistemas e Desenvolvedor
+    {\Huge \textbf{GABRIEL MATHEUS OLIVEIRA}} \\
+    \vspace{6pt}
+    {\color{sectcol} \large \faCode \ Analista de Sistemas e Desenvolvedor} \\
+    \vspace{10pt}
+    
+    \small
+    \faMapMarker* Uberaba -- MG \quad 
+    \faPhone* (34) 99289-1596 \quad 
+    \faEnvelope \ \href{mailto:gab_matheus@hotmail.com}{gab\_matheus@hotmail.com} \\
+    \vspace{4pt}
+    \faLinkedin \ \href{https://linkedin.com/in/oliveiragm}{linkedin.com/in/oliveiragm} \quad 
+    \faGithub \ \href{https://github.com/GabMatheus}{github.com/GabMatheus} \quad 
+    \faGlobe \ \href{https://gabmatheus.github.io/Portifolio/}{Portfólio}
 \end{center}
 
-\vspace{6pt}
-
-%---------------------------------------------------------------------------------------
-%	META SECTION COM LINKS CLICÁVEIS
-%----------------------------------------------------------------------------------------
-\metasection{Uberaba – MG}{\textbf{Contato:} (34) 99289-1596}
-\metasection{\href{mailto:gab\_matheus@hotmail.com}{gab\_matheus@hotmail.com}}{\textbf{Portfólio:} \href{https://gabmatheus.github.io/Portifolio/}{gabmatheus.github.io}} 
-\metasection{\href{https://github.com/GabMatheus}{GitHub} | \href{https://linkedin.com/in/oliveiragm}{LinkedIn}}{\textbf{Habilitação:} AB}
-\vspace{-2pt}
-\textcolor{softcol}{\hrule}
-\vspace{6pt}
-
-\normalsize
-
-%---------------------------------------------------------------------------------------
-%	RESUMO PROFISSIONAL
-%----------------------------------------------------------------------------------------
-\vspace{-6pt}
+%--- RESUMO ---
 \cvsection{Resumo Profissional}
-Analista de Sistemas com mais de quatro anos de experiência, atuando no desenvolvimento de aplicações, automação de processos e análise de dados. Experiência com SQL e Python na construção de rotinas ETL, administração de bancos de dados e geração de informações para apoio à tomada de decisão, além de integração de sistemas e suporte a ambientes corporativos de TI.
+Analista de Sistemas com mais de quatro anos de experiência, atuando no desenvolvimento de aplicações, 
+automação de processos e análise de dados. Experiência com SQL e Python na construção de rotinas 
+ETL, administração de bancos de dados e geração de informações para apoio à tomada de decisão, além 
+de integração de sistemas e suporte a ambientes corporativos de TI.
 
-%============================================================================%
-%
-%	CV SECTIONS AND EVENTS (MAIN CONTENT)
-%
-%============================================================================%
-
-%---------------------------------------------------------------------------------------
-%	EXPERIÊNCIA PROFISSIONAL DETALHADA
-%----------------------------------------------------------------------------------------
+%--- EXPERIÊNCIA ---
 \cvsection{Experiência Profissional}
 
 \cvevent{06/2021 – 10/2025}{Analista de Sistemas}{CONEFI LTDA}{
 \begin{itemize}
-  \item Desenvolvimento e manutenção de aplicações internas.
-  \item Extração, tratamento e análise de dados utilizando SQL e Python para geração de insights operacionais.
-  \item Administração e modelagem de bancos de dados relacionais.
-  \item Automação de processos e pipelines ETL com Python.
-  \item Suporte técnico a sistemas ERP e usuários.
-  \item Manutenção da infraestrutura do departamento de TI.
+    \item Desenvolvimento e manutenção de aplicações internas e automação de pipelines ETL com Python.
+    \item Extração, tratamento e análise de dados (SQL/Python) para geração de insights operacionais.
+    \item Administração de bancos de dados relacionais e modelagem de dados.
+    \item Suporte técnico especializado a sistemas ERP (EMSys3, AutoSystem) e manutenção da infraestrutura do departamento de TI da empresa.
+     \item Automação de processos e atividades rotineiras com Python.
 \end{itemize}
 }
 
-\cvevent{09/2014 – 11/2015}{Estágio em Engenharia/TI}{TV Integração}{
+\cvevent{09/2014 – 11/2016}{Estágio em Engenharia/TI}{TV Integração (Afiliada Rede Globo)}{
 \begin{itemize}
-  \item Suporte técnico em TI e sistemas de transmissão.
-  \item Manutenção de equipamentos de TI e infraestrutura de rede.
-  \item Suporte aos usuários na operação de sistemas corporativos.
+    \item Suporte técnico em sistemas de transmissão e manutenção de infraestrutura de redes.
+    \item Operação e suporte a usuários.
 \end{itemize}
 }
 
-%---------------------------------------------------------------------------------------
-%	FORMAÇÃO ACADÊMICA
-%--------------------------------------------------------------------------------------
+%--- FORMAÇÃO ---
 \cvsection{Formação Acadêmica}
 
-\cvevent{Previsão: 06/2026}{Análise e Desenvolvimento de Sistemas}{UFV/UNINTER}
-{Disciplinas abrangendo programação, banco de dados, programação orientada a objetos, engenharia de software, gestão de projetos e análise de sistemas.}
+\cvevent{Previsão 06/2026}{Análise e Desenvolvimento de Sistemas}{UFV / UNINTER}{
+Disciplinas abrangendo programação, banco de dados, programação orientada a objetos, engenharia de software, gestão de projetos e análise de sistemas
+}
 
-\cvevent{Concluído}{Curso Técnico em Eletrônica}{CEFET-MG}
-{Formação técnica em eletrônica e sistemas embarcados.}
-{Desenvolvimento de projetos práticos, fundamentos de circuitos eletrônicos, microcontroladores e sistemas digitais.}
+\cvevent{Concluído}{Técnico em Eletrônica}{CEFET-MG}{
+Especialização em sistemas embarcados, microcontroladores e circuitos digitais.
+}
 
-%---------------------------------------------------------------------------------------
-%	HABILIDADES TÉCNICAS DETALHADAS
-%----------------------------------------------------------------------------------------
+%--- HABILIDADES ---
 \cvsection{Habilidades Técnicas}
 
-\textbf{Análise de Dados}\\
-$\cdot$ SQL (PostgreSQL, MySQL, SQL Server)\\
-$\cdot$ Python (ETL, automação, análise de dados)\\
-$\cdot$ Web Scraping\\
-$\cdot$ Geração de relatórios e dashboards\\[4pt]
-\\\\\\\\\\\\\\\\
-\textbf{Desenvolvimento}\\
-$\cdot$ Python, C, C++\\
-$\cdot$ Flask, React, Electron\\
-$\cdot$ APIs REST (desenvolvimento e testes)\\
-$\cdot$ HTML, CSS, JavaScript\\
-$\cdot$ Desenvolvimento de aplicações desktop e web\\[4pt]
+\begin{multicols}{2}
+    \textbf{\faDatabase \ Dados \& Backend}
+    \begin{itemize}
+        \item SQL (PostgreSQL, MySQL, SQL Server)
+        \item Python (ETL, Pandas, Automação)
+        \item APIs REST (Flask, Postman)
+        \item Web Scraping & Noções de IA
+    \end{itemize}
 
-\textbf{Ferramentas \& Infraestrutura}\\
-$\cdot$ Git, Linux, Postman\\
-$\cdot$ JSON, XML\\
-$\cdot$ ERPs: EMSys3, AutoSystem, Domínio\\
-$\cdot$ Noções de redes, servidores e firewall\\
+    \columnbreak
 
-\textbf{Complementar}\\
-$\cdot$ Pacote Office Avançado (Excel, Word, PowerPoint)\\
-$\cdot$ LaTeX (documentação técnica)\\
-$\cdot$ Metodologias Ágeis (Scrum)\\
-$\cdot$ Princípios SOLID\\
-$\cdot$ Modelagem de dados e diagramas UML
+    \textbf{\faLaptopCode \ Desenvolvimento \& Infra}
+    \begin{itemize}
+        \item Git, Linux, JSON/XML
+        \item HTML, CSS, JavaScript (React)
+        \item Metodologias Ágeis (Scrum)
+        \item Princípios SOLID
+        \item ERPs (EMSys3, AutoSystem, Domínio)
+    \end{itemize}
+\end{multicols}
 
-%---------------------------------------------------------------------------------------
-%	CURSOS E CERTIFICAÇÕES
-%----------------------------------------------------------------------------------------
+%--- CURSOS E EXTRAS ---
 \cvsection{Cursos e Certificações}
-
-\cvevent{2023}{General English (Nível B2)}{OSCARS International - Dublin/Irlanda}
-{Seis meses de imersão em Dublin, Irlanda.}
-
-
-%---------------------------------------------------------------------------------------
-%	REFERÊNCIAS PROFISSIONAIS
-%----------------------------------------------------------------------------------------
-\cvsection{Referências Profissionais}
-
+\cvevent{2023}{Inglês Geral (Nível B2)}{OSCARS International -- Dublin/Irlanda}{
+Intercâmbio de 6 meses com foco em proficiência comunicativa em ambiente internacional.
+}
+\\\\\\\\\\\\\\\\
+%--- PUBLICAÇÕES ---
+\cvsection{Publicações}
+\cvevent{2021}{Artigos Técnicos em Sistemas de Informação}{Produção Acadêmica}{
 \begin{itemize}
-\setlength\itemsep{4pt}
-\item \textbf{Bruno Lopes} — Gerente de operações, POSTOS ALPA | (34) 98802-3389
-\item \textbf{Thiago Matias} — Coordenador de TI, CONEFI | (34) 98848-9918
+    \item Pesquisas sobre qualidade de software, arquitetura de componentes e GPUs.
+    \item \faGithub \ \href{https://github.com/GabMatheus/Pesquisas_Latex}{Repositório com os artigos}
+\end{itemize}
+}
+
+%--- REFERÊNCIAS ---
+\cvsection{Referências Profissionais}
+\begin{itemize}[label=\faUserCheck, leftmargin=1.5em]
+    \item \textbf{Bruno Lopes} | Gerente de Operações, Postos Alpa | (34) 98802-3389
+    \item \textbf{Thiago Matias} | Coordenador de TI, Conefi | (34) 98848-9918
 \end{itemize}
 
-%--------------------------------------------------------------------------------------------------
-%	RODAPÉ COM LINKS
-%--------------------------------------------------------------------------------------------------
-\null
-\vspace{1cm} % ajuste aqui: 0.5cm, 1cm, 1.5cm
-\hspace{-0.25\linewidth}\colorbox{white}{\makebox[1.5\linewidth][c]{\mystrut  
-    \textnormal{
-        \textcolor{sectcol}{\href{https://gabmatheus.github.io/Portifolio/}{Portfólio}} 
-        $\cdot$ 
-        \textcolor{sectcol}{\href{https://github.com/GabMatheus}{GitHub}}
-        $\cdot$
-        \textcolor{sectcol}{\href{https://linkedin.com/in/oliveiragm}{LinkedIn}}
-        $\cdot$
-        \textcolor{sectcol}{\href{mailto:gab\_matheus@hotmail.com}{E-mail}}
-        $\cdot$
-        \textcolor{sectcol}{(34) 99289-1596}
-    }
-}}
+\vfill
+\center{\footnotesize \textcolor{lightgray}{Documento gerado em \LaTeX \ | Disponível para validação via GitHub.}}
 
-
-%============================================================================%
-%
-%
-%
-%	DOCUMENT END
-%
-%
-%
-%============================================================================%
 \end{document}
