--- a/curriculo.tex
+++ b/curriculo.tex
@@ -58,7 +58,7 @@
 \begin{center}
     {\Huge \textbf{GABRIEL MATHEUS OLIVEIRA}} \\
     \vspace{6pt}
-    {\color{sectcol} \large \faCode \ Analista de Sistemas e Desenvolvedor} \\
+    {\color{sectcol} \large \faTools \ Analista de Sistemas | Suporte Técnico} \\
     \vspace{10pt}
     
     \small
@@ -73,20 +73,18 @@
 
 %--- RESUMO ---
 \cvsection{Resumo Profissional}
-Analista de Sistemas com mais de quatro anos de experiência, atuando no desenvolvimento de aplicações, 
-automação de processos e análise de dados. Experiência com SQL e Python na construção de rotinas 
-ETL, administração de bancos de dados e geração de informações para apoio à tomada de decisão, além 
-de integração de sistemas e suporte a ambientes corporativos de TI.
+Analista de Sistemas com mais de cinco anos de experiência, atuando no desenvolvimento de aplicações, suporte técnico, automação de processos, tratamento e análise de dados, administração de bancos de dados (DBA) e apoio estratégico à tomada de decisão por meio da geração de informações e indicadores.
+
 
 %--- EXPERIÊNCIA ---
 \cvsection{Experiência Profissional}
 
-\cvevent{06/2021 – 10/2025}{Analista de Sistemas}{CONEFI LTDA}{
+\cvevent{06/2021 – 10/2025}{Analista de Suporte}{CONEFI LTDA}{
 \begin{itemize}
-    \item Desenvolvimento e manutenção de aplicações internas e automação de pipelines ETL com Python.
-    \item Extração, tratamento e análise de dados (SQL/Python) para geração de insights operacionais.
+    \item Suporte técnico especializado de nível 2/3 para sistemas ERP, usuários e infraestrutura de TI corporativa.
+    \item Extração, limpeza e análise de dados para gerar insights operacionais e suportar tomadas de decisão.
     \item Administração de bancos de dados relacionais e modelagem de dados.
-    \item Suporte técnico especializado a sistemas ERP (EMSys3, AutoSystem) e manutenção da infraestrutura do departamento de TI da empresa.
+    \item Compras e vendas do setor de TI além de manutenção corretiva e preventiva de hardwares.
      \item Automação de processos e atividades rotineiras com Python.
 \end{itemize}
 }
@@ -101,7 +99,7 @@ de integração de sistemas e suporte a ambientes corporativos de TI.
 %--- FORMAÇÃO ---
 \cvsection{Formação Acadêmica}
 
-\cvevent{Previsão 06/2026}{Análise e Desenvolvimento de Sistemas}{UFV / UNINTER}{
+\cvevent{06/2026}{Análise e Desenvolvimento de Sistemas}{UFV/UNINTER}{
 Disciplinas abrangendo programação, banco de dados, programação orientada a objetos, engenharia de software, gestão de projetos e análise de sistemas
 }
 
@@ -116,26 +114,31 @@ Especialização em sistemas embarcados, microcontroladores e circuitos digitais
     \textbf{\faDatabase \ Dados \& Backend}
     \begin{itemize}
         \item SQL (PostgreSQL, MySQL, SQL Server)
-        \item Python (ETL, Pandas, Automação)
-        \item APIs REST (Flask, Postman)
-        \item Web Scraping & Noções de IA
+        \item Administração e modelagem de bancos de dados (DBA)
+        \item Python (ETL, Pandas, automação)
+        \item APIs REST (Flask)
+        \item Web Scraping
+        \item Análise de dados
     \end{itemize}
 
     \columnbreak
 
     \textbf{\faLaptopCode \ Desenvolvimento \& Infra}
     \begin{itemize}
-        \item Git, Linux, JSON/XML
-        \item HTML, CSS, JavaScript (React)
+        \item Git, Linux
+        \item JSON, XML
+        \item HTML, CSS, JavaScript
         \item Metodologias Ágeis (Scrum)
         \item Princípios SOLID
-        \item ERPs (EMSys3, AutoSystem, Domínio)
+        \item Pacote Office (Excel avançado)
+        \item ERPs (EMSys3, AutoSystem, Domínio, Ultracar)
     \end{itemize}
 \end{multicols}
 
+
 %--- CURSOS E EXTRAS ---
 \cvsection{Cursos e Certificações}
-\cvevent{2023}{Inglês Geral (Nível B2)}{OSCARS International -- Dublin/Irlanda}{
+\cvevent{2019}{Inglês Geral (Nível B2)}{OSCARS International -- Dublin/Irlanda}{
 Intercâmbio de 6 meses com foco em proficiência comunicativa em ambiente internacional.
 }
 \\\\\\\\\\\\\\\\
